Changes background image Fixes code blocks being too bright in dark mode

--- a/darkmode.less
+++ b/darkmode.less
@@ -31,9 +31,12 @@
 			color: @color-light-gray;
 		}
 		
-		code {
+		pre {
 			background-color: @color-black;
 			border-color: @dark-content-text-border;
+		}
+		
+		code {
 			color: @color-light-gray;
 		}
 	}
